--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "md": "env-cmd node src/cli.js",
-    "md:test": "node src/cli.js"
+    "md:test": "env-cmd -f ./testing/.env node src/cli.js"
   },
   "dependencies": {
     "@caporal/core": "2.0.2",
