--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "repository": "https://github.com/mdn/markdown.git",
   "author": "Mozilla",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "type": "module",
   "scripts": {
     "lint:js": "eslint --ext .js src",
