!fix:lib ~ remove m2h from repository
This removes the `m2h` portion of the tool from this repository.
The `m2h` portion of the tool will now only be accessible via [Yari](https://github.com/mdn/yari/)

fix #29

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mdn/markdown-converter",
-  "description": "MDN Web Docs tool to covert HTML to Markdown and vice versa",
+  "description": "MDN Web Docs tool to covert HTML to Markdown",
   "export": "./src/cli.js",
   "version": "0.0.1",
   "repository": "https://github.com/mdn/markdown.git",
