--- a/package.json
+++ b/package.json
@@ -27,15 +27,10 @@
     "prettier": "^2.5.1",
     "rehype-format": "3.1.0",
     "rehype-parse": "7.0.1",
-    "rehype-raw": "5.1.0",
     "rehype-stringify": "8.0.0",
     "remark-gfm": "1.0.0",
-    "remark-parse": "9.0.0",
     "remark-prettier": "1.3.0",
-    "remark-rehype": "8.1.0",
-    "unified": "9.2.1",
-    "unist-builder": "2.0.3",
-    "unist-util-visit": "2.0.3"
+    "unified": "9.2.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
