--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,6 +35,4 @@ jobs:
       - name: Basic m2h/h2m tool testing
         env:
           ENV_FILE: testing/.env
-        run: |
-          yarn md:test h2m markdown/tool/h2m --locale en-US
-          diff -s testing/content/files/en-us/markdown/tool/h2m/index.md testing/content/files/en-us/markdown/tool/h2m/expected.md
+        run: yarn test
