--- a/package.json
+++ b/package.json
@@ -9,34 +9,35 @@
   "type": "module",
   "scripts": {
     "lint:js": "eslint --ext .js src",
-    "md": "env-cmd node src/cli.js",
-    "md:test": "env-cmd -f ./testing/.env node src/cli.js"
+    "h2m": "env-cmd node src/cli.js",
+    "h2m:test": "env-cmd -f ./testing/.env node src/cli.js",
+    "test": "yarn h2m:test markdown/tool/h2m --locale en-US && diff -s testing/content/files/en-us/markdown/tool/h2m/index.md testing/content/files/en-us/markdown/tool/h2m/expected.md"
   },
   "dependencies": {
     "@caporal/core": "2.0.2",
-    "@mdn/yari": "^0.6.39",
-    "chalk": "4.1.2",
-    "cheerio": "1.0.0-rc.10",
-    "cli-progress": "3.10.0",
+    "@mdn/yari": "1.14.3",
+    "chalk": "5.0.1",
+    "cheerio": "1.0.0-rc.12",
+    "cli-progress": "3.11.2",
     "front-matter": "4.0.2",
-    "hast-util-is-element": "1.1.0",
-    "hast-util-to-html": "7.1.3",
-    "hast-util-to-text": "2.0.1",
-    "mdast-util-phrasing": "2.0.0",
+    "hast-util-is-element": "2.1.2",
+    "hast-util-to-html": "8.0.3",
+    "hast-util-to-text": "3.1.1",
+    "mdast-util-phrasing": "3.0.0",
     "node-gettext": "3.0.0",
-    "prettier": "^2.5.1",
-    "rehype-format": "3.1.0",
+    "prettier": "2.7.1",
+    "rehype-format": "4.0.1",
     "rehype-parse": "8.0.4",
-    "rehype-stringify": "8.0.0",
+    "rehype-stringify": "9.0.3",
     "remark-gfm": "1.0.0",
     "remark-prettier": "1.3.0",
-    "unified": "9.2.1"
+    "unified": "10.1.2"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4"
+    "env-cmd": "10.1.0",
+    "eslint": "8.21.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
