--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
     "eslint-plugin-import": "2.26.0"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": ">=12.0.0 <17.0.0"
   }
 }
