--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   "scripts": {
     "lint:js": "eslint --ext .js src",
     "h2m": "env-cmd node src/cli.js",
-    "h2m:test": "env-cmd -f ./testing/.env node src/cli.js",
-    "test": "yarn h2m:test markdown/tool/h2m --locale en-US --mode keep --skip-report && diff -s testing/content/files/en-us/markdown/tool/h2m/index.md testing/content/files/en-us/markdown/tool/h2m/expected.md"
+    "test": "c8 mocha ./testing/test.js"
   },
   "dependencies": {
     "@caporal/core": "2.0.2",
     "@mdn/yari": "1.14.22",
+    "c8": "7.12.0",
     "chalk": "5.0.1",
     "cheerio": "1.0.0-rc.12",
     "cli-progress": "3.11.2",
+    "fdir": "5.2.0",
     "front-matter": "4.0.2",
     "hast-util-is-element": "2.1.2",
     "hast-util-to-html": "8.0.3",
     "hast-util-to-text": "3.1.1",
+    "js-yaml": "4.1.0",
     "mdast-util-phrasing": "3.0.0",
+    "mocha": "10.0.0",
     "node-gettext": "3.0.0",
     "prettier": "2.7.1",
     "rehype-format": "4.0.1",
