chore(docs): Revert to generic issue template

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -5,27 +5,17 @@ body:
   - type: markdown
     attributes:
       value: |
+        ### Before you start
+
         **Want to fix the problem yourself?** This project is open source and we welcome fixes and improvements from the community!
 
         ↩ Check the project [CONTRIBUTING.md](../blob/main/CONTRIBUTING.md) guide to see how to get started.
-  - type: checkboxes
-    id: checklist
-    attributes:
-      label: "Before submitting the issue, confirm that you've checked everything in the following list, and mark them as completed here:"
-      description: Make sure you have provided all the information below so we can help resolve your issue.
-      options:
-        - label: Issue is reproducible on this repository by following the [quick-start instructions](https://github.com/mdn/django-locallibrary-tutorial#quick-start).
-          required: true
-        - label: A clean/fresh database was used when the issue was encountered.
-          required: true
-        - label: Information about the environment setup when the issue was encountered is included in the issue.
-          required: true
-        - label: Output logs are included in the issue.
-          required: true
+
+        ---
   - type: textarea
     id: problem
     attributes:
-      label: What was incorrect, unhelpful, or unexpected?
+      label: What information was incorrect, unhelpful, or incomplete?
     validations:
       required: true
   - type: textarea
@@ -35,13 +25,10 @@ body:
     validations:
       required: true
   - type: textarea
-    id: logs
+    id: references
     attributes:
-      label: Output logs
-      description: |
-        Share any logs that describe the problem you are seeing. If you are seeing an error, please include the full error message.
-      placeholder: |
-        You can paste the output directly or upload it as an attachment.
+      label: Do you have any supporting links, references, or citations?
+      description: Link to information that helps us confirm your issue.
   - type: textarea
     id: more-info
     attributes:
